# jane/Client.php
@@ -108,6 +108,22 @@ class Client extends \Jane\OpenApiRuntime\Client\Psr18Client
      *
      *     @var string $operator
      *     @var string $language de, en
+     * }
+     *
+     * @param string $fetch Fetch mode to use (can be OBJECT or RESPONSE)
+     *
+     * @return \Heptacom\DigiStore24\Model\ListEticketsResponse|\Heptacom\DigiStore24\Model\ErrorResponse|\Psr\Http\Message\ResponseInterface|null
+     */
+    public function listEtickets(string $apiToken, array $queryParameters = [], string $fetch = self::FETCH_OBJECT)
+    {
+        return $this->executePsr7Endpoint(new \Heptacom\DigiStore24\Endpoint\ListEtickets($apiToken, $queryParameters), $fetch);
+    }
+
+    /**
+     * @param array $queryParameters {
+     *
+     *     @var string $operator
+     *     @var string $language de, en
      *     @var string $layout all, orderform_responsive, orderform_widget, orderform_legacy
      * }
      *
